--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "contentful": "^8.2.0",
     "date-fns": "^2.19.0",
     "gray-matter": "^4.0.2",
     "next": "10.0.8",
