--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
     "sass": "^1.32.8"
