--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.2.6",
     "contentful": "^8.2.0",
     "date-fns": "^2.19.0",
+    "framer-motion": "^3.10.5",
     "gray-matter": "^4.0.2",
     "next": "10.0.8",
     "react": "17.0.1",
